[fix] container rebuild, align center '도움이 필요하신가요'

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,9 +1,9 @@
 .login {
+  width:100%;
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
   display: flex;
-  height: 100vh;
   background: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0) 0%,
@@ -11,11 +11,12 @@
     ),
     url("https://assets.nflxext.com/ffe/siteui/vlv3/b8e09d9c-d1e7-4800-afd9-810e41ace684/6d68acdf-6efa-4f03-9513-ef482daff117/KR-ko-20210607-popsignuptwoweeks-perspective_alpha_website_large.jpg");
   background-size: cover;
-  position: relative;
 
   .top {
+    width:100%;
+    height: 80px;
     .wrapper {
-      padding: 25px 50px;
+      padding: 25px 30px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -27,33 +28,32 @@
   }
 
   .container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    width:100%;
     margin-top: 20px;
-    top: 0;
-    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: initial;
     color: white;
 
     form {
       width: 400px;
-      height: 480px;
+      height: 590px;
       padding: 30px;
       border-radius: 5px;
       background-color: rgba(0,0,0,0.7);
-      display: flex;
-      flex-direction: column;
       align-items: center;
 
-      h1{
+      .login-container{
+        margin: 30px 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1{
         margin-top: 20px;
         margin-bottom: 25px;
         font-size: 40px;
-      }
+        }
 
       input {
         height: 50px;
@@ -71,18 +71,9 @@
         }
       }
 
-      div{
-        flex-direction: row;
+      .remember{
         width: 80%;
-        display:flex;
-        input{
-          height: 13px;
-        }
-        div{
-          font-size: 13px;
-          color: rgb(153, 153, 153);
-        }
-        margin-bottom: 30px;
+        align-content: space-between;
       }
       
 
@@ -100,7 +91,24 @@
         cursor: pointer;
       }
 
-      span {
+      .remember{
+        color: rgb(153, 153, 153);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        small{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+      .more{
+        width:80%;
+        margin: 40px;
+        display: flex;
+        flex-direction: column;
+        span {
+          margin-top:10px;
         color: rgb(100, 100, 100);
         b {
           color: white;
@@ -108,11 +116,14 @@
       }
 
       small{
+        margin-top:10px;
         color: rgb(100, 100, 100);
         span{
-          color:rgb(65, 65, 235);
+          color:rgb(85, 85, 236);
         }
       }
+    }
+  }
     }
   }
 }
